# smart-docs-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  setup.cfg
.agent/skills/: fastapi-expert
.agents/: AGENTS.md
.agents/skills/fastapi-architecture/: README.md  SKILL.md
.agents/skills/vercel-deployment/: SKILL.md
.claude/: CLAUDE.md
backend/: .dockerignore  .env  .env.example  Dockerfile  alembic.ini  check_tables.py  fix_db_tables.py  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_rag_tables.py  003_fix_enum_values.py  004_change_embedding_dim_2048.py  005_change_embedding_dim_768.py  006_change_embedding_dim_512.py  202603_002_add_oauth_fields.py  e60f95f576ed_create_users_and_todos_tables.py  f3c9a8b2d5e1_fix_timezone_in_timestamp_columns.py
backend/app/: exceptions.py  logging.py  main.py  rate_limiter.py
backend/app/api/v1/: api.py  debug.py
backend/app/auth/: controller.py  google_oauth_service.py  model.py  service.py
backend/app/chat/: controller.py  model.py  service.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py  base.py  core.py
backend/app/documents/: controller.py  model.py  service.py
backend/app/entities/: __init__.py  chunk.py  conversation.py  document.py  message.py  todo.py  user.py
backend/app/notifications/: redis_notifier.py
backend/app/rag/: chat_service.py  chunker.py  embedding_config.py  ingestion_service.py  model.py  vector_store.py  websocket_handler.py
backend/app/todos/: controller.py  model.py  service.py  stats.py  stats_service.py
backend/app/users/: controller.py  model.py  service.py
backend/scripts/: reindex_chunks.py  reindex_chunks_with_voyage.py
backend/tests/: conftest.py
backend/tests/chat/: test_chat_controller.py  test_chat_controller_currentuser.py  test_chat_service.py  test_websocket_flow.py
backend/tests/documents/: test_documents_controller.py  test_documents_controller_currentuser.py  test_documents_service_additional.py  test_upload_flow.py
backend/tests/perf/: test_rag_latency.py
backend/tests/rag/: test_chat_metadata.py  test_chunker.py  test_vector_store.py
docs/: google-oauth.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthProvider.tsx  ChatInterface.tsx  DocumentPicker.tsx  DocumentUpload.tsx  FullScreenLoader.tsx  PriorityChart.tsx  StatsCard.tsx  ThemeProvider.tsx  TodoForm.tsx  (+1 more)
(+84 files in other folders)
